<resources>
    <string name="app_name">KIH Virtual</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profil</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="judul_splash_screen">KIH Virtual</string>
    <string name="title_articles">Artikel</string>
    <string name="deskripsi_cover_article">cover article</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_404">404</string>
    <string name="terjadi_sebuah_kesalahan">Terjadi sebuah kesalahan</string>
    <string name="pesan_error_404">Mohon Maaf! Artikel yang Anda minta tidak ditemukan</string>
    <string name="kembali">Kembali</string>
    <string name="bagikan">Bagikan</string>
    <string name="daftar">Daftar</string>
    <string name="terakhir_diupdate">Terakhir diupdate:</string>
    <string name="nama">Nama</string>
    <string name="pekerjaan_suami">Pekerjaan Suami</string>
    <string name="pekerjaan_ibu">Pekerjaan Ibu</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="lewati">Lewati</string>
    <string name="ibu_memiliki_riwayat_kehamilan_sebelumnya">Ibu memiliki riwayat kehamilan sebelumnya</string>
    <string name="riwayat_kehamilan_yang_lalu">Riwayat kehamilan yang lalu</string>
    <string name="tanggal">Tanggal</string>
    <string name="umur">Umur</string>
    <string name="alamat">Alamat</string>
    <string name="hamil_ke">Hamil Ke-</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="pendidikan_ibu">Pendidikan Ibu</string>
    <string name="pendidikan_suami">Pendidikan Suami</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="haid_terakhir">Haid Terakhir</string>
    <string name="usia_anak_terakhir">Usia Anak Terakhir</string>
    <string name="lama_menikah">Lama Menikah</string>
    <string name="tutup">Tutup</string>
    <string name="riwayat_persalinan_yang_lalu">Riwayat persalinan yang lalu</string>
    <string name="ibu_memiliki_riwayat_persalinan_sebelumnya">Ibu memiliki riwayat persalinan sebelumnya</string>
    <string name="info_skip_persalinan">Lewati bila Ibu baru pertama kali dan belum memiliki riwayat persalinan sebelumnya</string>
    <string name="remove_date">Remove date</string>
    <string name="review_button">Review data yang sudah Ibu masukan</string>
    <string name="lama_pernikahan">Lama Pernikahan</string>
    <string name="proses">Proses</string>
    <string name="lainnya">Lainnya</string>
    <string name="foto_user">foto user</string>
    <string name="kesimpulan_merah">Berdasarkan data yang Ibu masukan, Ibu harus dirujuk atau segera menuju ke puskesmas agar mendapatkan penanganan</string>
    <string name="kesimpulan_kuning">Berdasarkan data yang Ibu masukan, Ibu harus konsultasi ke puskesmas terdekat</string>
    <string name="kesimpulan_hijau">Berdasarkan data yang Ibu masukan, Ibu dapat bergabung dalam edukasi melalui kelas ibu hamil dibawah</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="heading_puskesmas">Informasi Puskesmas Rujukan</string>
    <string name="heading_kelas">Daftar Kelas Ibu Hamil</string>
    <string name="cover_kelas">Cover kelas</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="saya_setuju">Saya setuju</string>
    <string name="keluar">Keluar</string>
</resources>