<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.form.FormInfoDataDiriFragment"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:title="Kau Community Screening"
        app:subtitle="Oleh Keluarga"
        android:elevation="3dp"
        android:id="@+id/toolbar_form_data_diri">
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="100dp"
            android:paddingHorizontal="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama"
                    android:id="@+id/nama_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nama"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/umur"
                    app:placeholderText="Dalam Tahun"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:helperTextEnabled="true"
                    android:id="@+id/umur_layout"
                    app:helperText="Umur dalam tahun">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/umur"
                        android:inputType="numberSigned|number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat"
                    android:id="@+id/alamat_layout"
                    app:placeholderText="Alamat tinggal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alamat"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hamil_ke"
                    android:id="@+id/hamil_ke_layout"
                    app:placeholderText="Hamil Kali ke-"
                    app:helperText="Bila baru pertama kali, kolom dapat dikosongkan atau diisi dengan nilai 1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/hamil_ke"
                        android:inputType="numberSigned|number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pendidikan"
                    style="@style/TextAppearance.AppCompat.Subhead"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pendidikan_ibu"
                    android:id="@+id/pendidikan_istri_layout"
                    app:placeholderText="Pendidikan Terakhir / Sekarang"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pendidikan_istri"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pendidikan_suami"
                    android:id="@+id/pendidikan_suami_layout"
                    app:placeholderText="Pendidikan Terakhir / Sekarang"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pendidikan_suami"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pekerjaan"
                    style="@style/TextAppearance.AppCompat.Subhead"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pekerjaan_ibu"
                    android:id="@+id/pekerjaan_istri_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pekerjaan_istri"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pekerjaan_suami"
                    android:id="@+id/pekerjaan_suami_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pekerjaan_suami"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/haid_terakhir"
                    android:id="@+id/haid_terakhir_layout"
                    app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/haid_terakhir"
                        android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usia_anak_terakhir"
                    android:id="@+id/usia_anak_terakhir_layout"
                    app:helperText="Opsional, dapat diabaikan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/usia_anak_terakhir"
                        android:inputType="numberSigned|number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lama_menikah"
                    android:id="@+id/lama_menikah_layout"
                    app:placeholderText="Dalam Tahun"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:helperTextEnabled="true"
                    app:helperText="Lama menikah dalam tahun (Opsional, dapat diabaikan)">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lama_menikah"
                        android:inputType="numberSigned|number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>